# tree-sitter-sop

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-sop.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_sop/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSop/: sop.h
examples/: badsyntax.sop  csv.sop
src/: grammar.json  node-types.json  parser.c
test/corpus/: functions.txt  statements.txt
